# arby

./: CMakeLists.txt  CMakePresets.json
apps/: CMakeLists.txt
apps/alex_testing/: CMakeLists.txt  config.cpp  config.hpp  main.cpp
arby/: CMakeLists.txt  connection_state.cpp  connection_state.hpp  connector_traits.hpp  main.cpp
arby/binance/: aggregate_book_feed.hpp  aggregate_book_feed_impl.hpp  connector.cpp  connector.hpp  entity_management.hpp  order_book.hpp  rest.cpp  rest.hpp  stream_protocol.hpp
arby/binance/detail/: connector_impl.cpp  connector_impl.hpp
arby/binance/protocol/: event.cpp  event.hpp  http.hpp  stream.cpp  stream.hpp
arby/binance/protocol/detail/: json_conversion.hpp
arby/connector/: connector_traits.hpp  inbound_message.hpp
arby/entity/: entity_base.cpp  entity_base.hpp  entity_key.hpp  entity_service.hpp
arby/power_trade/: connector.hpp  inbound_message.hpp  order_book.cpp
arby/power_trade/detail/: connector_impl.cpp  connector_impl.hpp
arby/reactive/impl/: fix_connector_impl.hpp
arby/stratagy/arbitrage/: monitor.hpp
arby/trading/: aggregate_book.cpp  aggregate_book.hpp  aggregate_book.spec.cpp  aggregate_book_feed.hpp  feed_snapshot.cpp
lib/asioex/: execute_on.hpp
lib/config/: asio.hpp  error.hpp  filesystem.hpp  format.hpp
lib/util/: async_sleep.hpp  byte_literal.hpp  byte_literal.spec.cpp  cross_executor_connection.cpp  cross_executor_connection.hpp  signal_map.hpp
